--- a/conference-room_item6.html
+++ b/conference-room_item6.html
@@ -106,9 +106,7 @@
                         <li>/</li>
                         <li><a href="organizers.html">租借場地</a></li>
                         <li>/</li>
-                        <li><a href="#">會議室</a></li>
-                        <li>/</li>
-                        <li class="activeddd">貴賓室</li>
+                        <li class="activeddd">會議室</li>
                     </ul>
                 </div>
             </div>
@@ -130,92 +128,197 @@
 
                 <div class="viproom">
                     <div class="vip_wrap">
-                        <div class="vip_titlebg">1樓/第一貴賓室</div>
+                        <div class="vip_titlebg">(1樓) 第1貴賓室</div>
                         <div class="vip_pic"><img src="images/56f4ce887c05b.jpg"></div>
                         <div class="vip_font_wrap">
                             <div class="vip_price">
                                 <div class="vip_price_name"><span class="vip_strong">面積</span></br>(平方公尺/坪)
                                 </div>
-                                <div class="vip_price_name vip_textright vip_gray">47.21/14.28</div>
+                                <div class="vip_price_name vip_textright vip_gray">46/8.6 x 5.4 x 2.6</div>
                             </div>
                             <div class="vip_price">
                                 <div class="vip_price_name"><span class="vip_strong">租金/每小時</span></br>(新台幣/未稅)</div>
-                                <div class="vip_price_name vip_textright vip_blueprice">NT$1,600</div>
+                                <div class="vip_price_name vip_textright vip_blueprice">NT$3,000</div>
                             </div>
                         </div>
                     </div>
                     <div class="vip_wrap">
-                        <div class="vip_titlebg">1樓/第一貴賓室</div>
+                        <div class="vip_titlebg">(1樓) 第2貴賓室</div>
                         <div class="vip_pic"><img src="images/56f4ce887c05b.jpg"></div>
                         <div class="vip_font_wrap">
                             <div class="vip_price">
                                 <div class="vip_price_name"><span class="vip_strong">面積</span></br>(平方公尺/坪)
                                 </div>
-                                <div class="vip_price_name vip_textright vip_gray">47.21/14.28</div>
+                                <div class="vip_price_name vip_textright vip_gray">46/8.6 x 5.4 x 2.6</div>
                             </div>
                             <div class="vip_price">
                                 <div class="vip_price_name"><span class="vip_strong">租金/每小時</span></br>(新台幣/未稅)</div>
-                                <div class="vip_price_name vip_textright vip_blueprice">NT$1,600</div>
+                                <div class="vip_price_name vip_textright vip_blueprice">NT$3,000</div>
                             </div>
                         </div>
                     </div>
                     <div class="vip_wrap">
-                        <div class="vip_titlebg">1樓/第一貴賓室</div>
+                        <div class="vip_titlebg">(1樓) 貴賓簡報室</div>
                         <div class="vip_pic"><img src="images/56f4ce887c05b.jpg"></div>
                         <div class="vip_font_wrap">
                             <div class="vip_price">
                                 <div class="vip_price_name"><span class="vip_strong">面積</span></br>(平方公尺/坪)
                                 </div>
-                                <div class="vip_price_name vip_textright vip_gray">47.21/14.28</div>
+                                <div class="vip_price_name vip_textright vip_gray">96/11.4 x 8.4 x 2.6</div>
                             </div>
                             <div class="vip_price">
                                 <div class="vip_price_name"><span class="vip_strong">租金/每小時</span></br>(新台幣/未稅)</div>
-                                <div class="vip_price_name vip_textright vip_blueprice">NT$1,600</div>
+                                <div class="vip_price_name vip_textright vip_blueprice">NT$6,000</div>
                             </div>
                         </div>
                     </div>
                     <div class="vip_wrap">
-                        <div class="vip_titlebg">1樓/第一貴賓室</div>
+                        <div class="vip_titlebg">(1樓) P/Q區主辦單位辦公室</div>
                         <div class="vip_pic"><img src="images/56f4ce887c05b.jpg"></div>
                         <div class="vip_font_wrap">
                             <div class="vip_price">
                                 <div class="vip_price_name"><span class="vip_strong">面積</span></br>(平方公尺/坪)
                                 </div>
-                                <div class="vip_price_name vip_textright vip_gray">47.21/14.28</div>
+                                <div class="vip_price_name vip_textright vip_gray">11/11.4 x 2.8 x 2.6</div>
                             </div>
                             <div class="vip_price">
                                 <div class="vip_price_name"><span class="vip_strong">租金/每小時</span></br>(新台幣/未稅)</div>
-                                <div class="vip_price_name vip_textright vip_blueprice">NT$1,600</div>
+                                <div class="vip_price_name vip_textright vip_blueprice">NT$1,000</div>
                             </div>
                         </div>
                     </div>
                     <div class="vip_wrap">
-                        <div class="vip_titlebg">1樓/第一貴賓室</div>
+                        <div class="vip_titlebg">(4樓) 第3貴賓室</div>
                         <div class="vip_pic"><img src="images/56f4ce887c05b.jpg"></div>
                         <div class="vip_font_wrap">
                             <div class="vip_price">
                                 <div class="vip_price_name"><span class="vip_strong">面積</span></br>(平方公尺/坪)
                                 </div>
-                                <div class="vip_price_name vip_textright vip_gray">47.21/14.28</div>
+                                <div class="vip_price_name vip_textright vip_gray">46/8.6 x 5.4 x 2.6</div>
                             </div>
                             <div class="vip_price">
                                 <div class="vip_price_name"><span class="vip_strong">租金/每小時</span></br>(新台幣/未稅)</div>
-                                <div class="vip_price_name vip_textright vip_blueprice">NT$1,600</div>
+                                <div class="vip_price_name vip_textright vip_blueprice">NT$3,000</div>
                             </div>
                         </div>
                     </div>
                     <div class="vip_wrap">
-                        <div class="vip_titlebg">1樓/第一貴賓室</div>
+                        <div class="vip_titlebg">(4樓) 第4貴賓室</div>
                         <div class="vip_pic"><img src="images/56f4ce887c05b.jpg"></div>
                         <div class="vip_font_wrap">
                             <div class="vip_price">
                                 <div class="vip_price_name"><span class="vip_strong">面積</span></br>(平方公尺/坪)
                                 </div>
-                                <div class="vip_price_name vip_textright vip_gray">47.21/14.28</div>
+                                <div class="vip_price_name vip_textright vip_gray">46/8.6 x 5.4 x 2.6</div>
                             </div>
                             <div class="vip_price">
                                 <div class="vip_price_name"><span class="vip_strong">租金/每小時</span></br>(新台幣/未稅)</div>
-                                <div class="vip_price_name vip_textright vip_blueprice">NT$1,600</div>
+                                <div class="vip_price_name vip_textright vip_blueprice">NT$3,000</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="vip_wrap">
+                        <div class="vip_titlebg">(4樓) R/S區主辦單位辦公室</div>
+                        <div class="vip_pic"><img src="images/56f4ce887c05b.jpg"></div>
+                        <div class="vip_font_wrap">
+                            <div class="vip_price">
+                                <div class="vip_price_name"><span class="vip_strong">面積</span></br>(平方公尺/坪)
+                                </div>
+                                <div class="vip_price_name vip_textright vip_gray">11/11.4 x 2.8 x 2.6</div>
+                            </div>
+                            <div class="vip_price">
+                                <div class="vip_price_name"><span class="vip_strong">租金/每小時</span></br>(新台幣/未稅)</div>
+                                <div class="vip_price_name vip_textright vip_blueprice">NT$1,000</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="vip_wrap">
+                        <div class="vip_titlebg">(7樓) 第5貴賓室</div>
+                        <div class="vip_pic"><img src="images/56f4ce887c05b.jpg"></div>
+                        <div class="vip_font_wrap">
+                            <div class="vip_price">
+                                <div class="vip_price_name"><span class="vip_strong">面積</span></br>(平方公尺/坪)
+                                </div>
+                                <div class="vip_price_name vip_textright vip_gray">29/ 5 x 5.8 x 2.6</div>
+                            </div>
+                            <div class="vip_price">
+                                <div class="vip_price_name"><span class="vip_strong">租金/每小時</span></br>(新台幣/未稅)</div>
+                                <div class="vip_price_name vip_textright vip_blueprice">NT$2,000</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="vip_wrap">
+                        <div class="vip_titlebg">(7樓) 第6貴賓室</div>
+                        <div class="vip_pic"><img src="images/56f4ce887c05b.jpg"></div>
+                        <div class="vip_font_wrap">
+                            <div class="vip_price">
+                                <div class="vip_price_name"><span class="vip_strong">面積</span></br>(平方公尺/坪)
+                                </div>
+                                <div class="vip_price_name vip_textright vip_gray">31/ 6.1 x 5.1 x 2.6</div>
+                            </div>
+                            <div class="vip_price">
+                                <div class="vip_price_name"><span class="vip_strong">租金/每小時</span></br>(新台幣/未稅)</div>
+                                <div class="vip_price_name vip_textright vip_blueprice">NT$2,000</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="vip_wrap">
+                        <div class="vip_titlebg">(7樓) 第7貴賓室</div>
+                        <div class="vip_pic"><img src="images/56f4ce887c05b.jpg"></div>
+                        <div class="vip_font_wrap">
+                            <div class="vip_price">
+                                <div class="vip_price_name"><span class="vip_strong">面積</span></br>(平方公尺/坪)
+                                </div>
+                                <div class="vip_price_name vip_textright vip_gray">29/  5 x 5.8 x 2.6</div>
+                            </div>
+                            <div class="vip_price">
+                                <div class="vip_price_name"><span class="vip_strong">租金/每小時</span></br>(新台幣/未稅)</div>
+                                <div class="vip_price_name vip_textright vip_blueprice">NT$2,000</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="vip_wrap">
+                        <div class="vip_titlebg">(7樓) 第8貴賓室</div>
+                        <div class="vip_pic"><img src="images/56f4ce887c05b.jpg"></div>
+                        <div class="vip_font_wrap">
+                            <div class="vip_price">
+                                <div class="vip_price_name"><span class="vip_strong">面積</span></br>(平方公尺/坪)
+                                </div>
+                                <div class="vip_price_name vip_textright vip_gray">31/ 6.1 x 5.1 x 2.6</div>
+                            </div>
+                            <div class="vip_price">
+                                <div class="vip_price_name"><span class="vip_strong">租金/每小時</span></br>(新台幣/未稅)</div>
+                                <div class="vip_price_name vip_textright vip_blueprice">NT$2,000</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="vip_wrap">
+                        <div class="vip_titlebg">(7樓) 第9貴賓室</div>
+                        <div class="vip_pic"><img src="images/56f4ce887c05b.jpg"></div>
+                        <div class="vip_font_wrap">
+                            <div class="vip_price">
+                                <div class="vip_price_name"><span class="vip_strong">面積</span></br>(平方公尺/坪)
+                                </div>
+                                <div class="vip_price_name vip_textright vip_gray">66/ 8.5 x 7.2 x 2.6</div>
+                            </div>
+                            <div class="vip_price">
+                                <div class="vip_price_name"><span class="vip_strong">租金/每小時</span></br>(新台幣/未稅)</div>
+                                <div class="vip_price_name vip_textright vip_blueprice">NT$4,000</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="vip_wrap">
+                        <div class="vip_titlebg">(7樓) 準備室</div>
+                        <div class="vip_pic"><img src="images/56f4ce887c05b.jpg"></div>
+                        <div class="vip_font_wrap">
+                            <div class="vip_price">
+                                <div class="vip_price_name"><span class="vip_strong">面積</span></br>(平方公尺/坪)
+                                </div>
+                                <div class="vip_price_name vip_textright vip_gray">260</div>
+                            </div>
+                            <div class="vip_price">
+                                <div class="vip_price_name"><span class="vip_strong">租金/每小時</span></br>(新台幣/未稅)</div>
+                                <div class="vip_price_name vip_textright vip_blueprice">NT$10,000</div>
                             </div>
                         </div>
                     </div>
