--- a/hall2.html
+++ b/hall2.html
@@ -92,42 +92,68 @@
                 <div class="m-page-headerbg"></div>
                 <div class="m-page-left_bg"><img src="images/pagebg.svg">
                     <div class="m-page_font">
-                        <div class="page_headtitle">南港2館</div>
-                        <div class="page_headtext">台北南港展覽館1館為全台首座專業化大型雙層展覽館 打造一個安全、舒適、便利、人本與環保的環境。
+                        <div class="page_headtitle">展覽會場</div>
+                        <div class="page_headtext">台北南港展覽館2館共有三個展覽空間，可規劃之標準攤位數達2146格
+
                         </div>
                     </div>
                 </div>
 
             </div>
             <div class="m-page_wrapper">
-                <div class="breadcrumb_title">基本資訊</div>
+                <div class="breadcrumb_title">南港1館</div>
                 <div class="twtbreadcrumb">
                     <ul>
-                        <li>首頁</li>
+                        <li><a href="index.html">首頁</a></li>
                         <li>/</li>
-                        <li>租借場地</li>
+                        <li><a href="organizers.html">租借場地</a></li>
                         <li>/</li>
-                        <li class="activeddd">展場</li>
+                        <li class="activeddd">展覽會場</li>
                     </ul>
                 </div>
             </div>
             <div class="orang_wrapper">
                 <div class="orang_tab">
                     <ul>
-                        <a href="hall2_application.html"><li class="active">展覽申請</li></a>
-                        <a href="hall2.html"><li>基本資訊</li></a>
-                        <a href="hall2_spaceview.html"><li>平面圖</li></a>
+                        <a href="organizers_item1.html"><li>基本資訊</li></a>
+                        <a href="organizers_item2.html"><li>一樓展場</li></a>
+                        <a href="organizers_item3.html"><li>四樓展場</li></a>
+                        <a href="organizers_item4.html"><li>內部實景</li></a>
+                        <a href="organizers_booking_calendar.html"><li>空檔查詢</li></a>
+                        <a href="organizers_item6.html"><li>展覽申請</li></a>
+                        <a href="#"><li>活動申請</li></a>
+                        <!-- <a href="#"><li>尾牙方案</li></a> -->
+                        <a href="hall2.html"><li class="active">南港一館</li></a>
+                        <a href="organizers_item5.html"><li>交通及停車場</li></a>
+                        <a href="organizers_item6.html"><li >展覽申請</li></a>
                     </ul>
                 </div>
 
+                <div class="news_continer">
+                    <div class="mod-organizer_title">申請流程</div>
+
+                    <div class="mod-organizer_title">1. 南港展覽館1館借用合約.zip </div>
+                    <div class="transport_point">
+                            <ul>
+                                <li>實施規範</li>
+                                <li>展場注意事項</li>
+                                <li>裝潢作業規範</li>
+                            </ul>
+                    </div>
+                    <div class="mod-organizer_title">2.「<a href="#">展場預約申請表</a>」填寫後email外借組莫非小姐<a href="#">mo@taitra.org.tw</a> (分機：2670)</div>
+                    <div class="safety_article">
+                    更多資訊請洽: </br>電話: 886-2-2725-5200 分機: 5521
+                    </div>
+                </div>
                 <div class="expo_content">
                     <div class="widget-pic"><img src="images/hall2.jpg"></div>
                     <div class="faq_num_listbox">
-                        <ol>
-                            <li>引頸期盼的會展產業的新生力軍台北南港展覽2館(簡稱南港2館)即將於今年底完工！該館落成可望滿足我國大型展覽展覽場地不足之需求，並提升我國會展產業國際競爭力，及促進經濟貿易持續發展需要。經濟部國際貿易局積極推動的「南港展覽館擴建計畫」，所新建的台北南港展覽館2館，接著將由外貿協會進行後續內部裝修工程及國內外宣傳推廣，預訂於2019年3月4日至9日「台北國際工具機展」正式啟用!</li>
-                            <li>南港2館一樓挑高12公尺展場，是目前全台灣挑高最高的有柱結構展覽館，全館預計新增2,362標準攤位，屆時加上南港展覽館1館、台北世貿中心1館、3館，合計共可以提供約6,500個攤位，將可以滿足大部分我國大型國際專業展覽需求。館內7樓規劃多功能會議中心，可彈性調整供展覽、會議、尾牙、宴會、獎旅等多元活動使用。
-                            </li>
-                        </ol>
+                        96年7月底完工、97年3月13日正式營運的台北南港展覽1館，為一擁有上、下層展廳、計可規劃2,467個標準攤位的大型專業展覽館，不但展示面積為台北世貿展覽大樓的兩倍大，其所擁有的14間會議室(可彈性隔間為18間)、2間餐廳及9間面對馬路的商店，均將提供使用者更為人性化及便利性的服務與設施。 
+                    </br></br>
+台北南港展覽館1館的上層雲端展場屋頂跨距達126 x 180公尺，淨高14.3~27.3公尺，全區無柱位，適合在展覽空檔期間舉辦大型演唱會、直銷會議、獎勵旅遊、宗教集會及公司餐會(含尾牙、春酒)等。為打造國際級、一流的會展空間，貿協已針對南港展覽館的特性，增設多項營運設備，包括多國語言的展場指標及線上導覽系統、全館無線上網等。
+</br></br> 
+台北南港展覽館1館的啟用，已帶動南港經貿園區的整體開發，並對我國經濟產值帶來顯著的貢獻。貿協也將更努力提升我國會展產業的產值，除積極規劃辦理新展外， 60個海外辦事處也將進行全球行銷，積極爭取國外展覽公司來台辦展，讓台灣會展產業在國際間持續發光發熱。
+
                     </div>
                 </div>
 
@@ -139,41 +165,83 @@
                     <div class="vendor_icon">
                         <div class="ven_pic"><img src="images/sky01.svg"></div>
                         <div class="ven_font">雲端展場</div>
-                        <div class="ven_text">一樓及四樓展場各可彈性格成2區使用，一樓挑高12公尺，四樓挑高9公尺。</div>
+                        <div class="ven_text">雲端展場及一樓展場各可彈性隔成3區使用,且雲端展場採無柱式挑高設計。</div>
                     </div>
                     <div class="vendor_icon">
                         <div class="ven_pic"><img src="images/sky02.svg"></div>
                         <div class="ven_font">電扶梯</div>
-                        <div class="ven_text">西側貨車坡道淨高4.2公尺，貨車可直達四樓展場。</div>
+                        <div class="ven_text">展場內南北兩側設有直通上下展場之電扶梯。</div>
                     </div>
                     <div class="vendor_icon">
                         <div class="ven_pic"><img src="images/sky03.svg"></div>
                         <div class="ven_font">展場設備</div>
-                        <div class="ven_text">展場鋪設溝槽，電路配線、網路、給水、排水、空氣壓縮等管線不外露。</div>
+                        <div class="ven_text">展場鋪設溝槽,電線、網路、給水、排水、空氣壓縮等管線不外露。</div>
                     </div>
                     <div class="vendor_icon">
                         <div class="ven_pic"><img src="images/sky04.svg"></div>
                         <div class="ven_font">攤位規劃</div>
-                        <div class="ven_text">可規劃1,772個標準攤位。</div>
+                        <div class="ven_text">可規劃2,467個標準攤位。</div>
                     </div>
                 </div>
                 <div class="hall2_mar">
-                    <div class="mod-organizer_title">7樓多功能會議中心</div>
+                    <div class="mod-organizer_title">會議室</div>
                     <div class="lihave_point">
                         <ul>
-                            <li>室內面積3,980平方公尺，可容納3,600人大型會議，亦可彈性分隔為8間會議室使用。</li>
-                            <li>另有6間小型會議室，可彈性分隔為50~200人使用。</li>
-                            <li>室內做為展覽使用可規劃222個標準攤位。</li>
-                            <li>廊道可供規劃152個標準攤位</li>
-                            <li>戶外空中花園，為全國唯一的會議、展覽及視野景觀的多用途空間。</li>
+                            <li>可同時容納2,538人</li>
+                            <li>另設有專業化視聽及會議系統，讓各類型議事均能順利進行。 </li>
+                            <li>14間會議室分佈於3樓(1間-可用餐包廂)、4樓(4間-可彈性分隔為6間)、5樓(5間-可彈性分隔為7間)與6樓(4間)</li>
                         </ul>
                     </div>
                     <div class="mod-organizer_title">停車空間</div>
                     <div class="lihave_point">
                         <ul>
-                            <li>地下一樓至三樓共規劃1,296格停車位。</li>
-                            <li>地下一樓淨高4.2公尺，進退場期間可供32輛大貨車臨停使用。</li>
+                            <li>汽車停車位620個</li>
+                            <li>1770個機車停車位</li>
                         </ul>
+                    </div>
+                </div>
+
+                <div class="news_continer">
+                    <div class="mod-organizer_title margintop_title">展場平面圖(點圖可直接下載jpg檔)</div>
+                    <div class="public_box">
+                        <div class="public_view">
+                            <div class="public_bg">
+                                <div class="public_pic">
+                                    <div class="pub_tag">一樓</div>
+                                    <img src="images/publie_space01.jpg">
+                                </div>
+                                <div class="public_title">展場平面圖 </div>
+                            </div>
+                        </div>
+                        <div class="public_view">
+                            <div class="public_bg">
+                                <div class="public_pic">
+                                    <div class="pub_tag">四樓</div>
+                                    <img src="images/publie_space01.jpg">
+                                </div>
+                                <div class="public_title">展場平面圖 </div>
+                            </div>
+                        </div>
+                        <div class="public_view">
+                            <div class="public_bg">
+                                <div class="public_pic">
+                                    <div class="pub_tag">七樓</div>
+                                    <img src="images/publie_space01.jpg">
+                                </div>
+                                <div class="public_title">展場平面圖 </div>
+                            </div>
+                        </div>
+                        <div class="public_view">
+                            <div class="public_bg">
+                                <div class="public_pic">
+                                    <div class="pub_tag">七樓</div>
+                                    <img src="images/publie_space01.jpg">
+                                </div>
+                                <div class="public_title">七樓平面圖(會議使用)</div>
+                            </div>
+                        </div>
+
+
                     </div>
                 </div>
 
