--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                                 <a href="organizers.html">
                                     <ul class="ul_skell">
                                         <li><img src="images/ke_01.svg"></li>
-                                        <li>租借場地</li>
+                                        <li><a href="organizers.html">租借場地</a></li>
                                     </ul>
                                 </a>
                             </div>
