--- a/organizers_item1.html
+++ b/organizers_item1.html
@@ -92,20 +92,22 @@
                 <div class="m-page-headerbg"></div>
                 <div class="m-page-left_bg"><img src="images/pagebg.svg">
                     <div class="m-page_font">
-                        <div class="page_headtitle">租借場地</div>
-                        <div class="page_headtext">台北南港展覽館1館為全台首座專業化大型雙層展覽館 打造一個安全、舒適、便利、人本與環保的環境。
+                        <div class="page_headtitle">展覽會場</div>
+                        <div class="page_headtext">台北南港展覽館2館共有三個展覽空間，可規劃之標準攤位數達2146格
+
+
                         </div>
                     </div>
                 </div>
 
             </div>
             <div class="m-page_wrapper">
-                <div class="breadcrumb_title">展覽會場</div>
+                <div class="breadcrumb_title">基本資訊</div>
                 <div class="twtbreadcrumb">
                     <ul>
-                        <li>首頁</li>
+                        <li><a href="index.html">首頁</a></li>
                         <li>/</li>
-                        <li>租借場地</li>
+                        <li><a href="organizers.html">租借場地</a></li>
                         <li>/</li>
                         <li class="activeddd">展覽會場</li>
                     </ul>
@@ -116,19 +118,21 @@
                     <ul>
                         <a href="organizers_item1.html"><li class="active">基本資訊</li></a>
                         <a href="organizers_item2.html"><li>一樓展場</li></a>
-                        <a href="organizers_item2.html"><li>四樓展場</li></a>
+                        <a href="organizers_item3.html"><li>四樓展場</li></a>
                         <a href="organizers_item4.html"><li>內部實景</li></a>
                         <a href="organizers_booking_calendar.html"><li>空檔查詢</li></a>
                         <a href="organizers_item6.html"><li>展覽申請</li></a>
                         <a href="#"><li>活動申請</li></a>
                         <!-- <a href="#"><li>尾牙方案</li></a> -->
-                        <a href="#"><li>南港一館</li></a>
+                        <a href="hall2.html"><li>南港一館</li></a>
                         <a href="organizers_item5.html"><li>交通及停車場</li></a>
                         <a href="organizers_item6.html"><li>展覽申請</li></a>
                     </ul>
                 </div>
 
-                <div class="expo_content">台北南港展覽館1館為全台首座專業化大型雙層展覽館，經營管理者外貿協會秉持著以客為尊的理念，打造一個安全、舒適、便利、人本與環保的環境。展館為一具有節能、節水、節省耗材等多重設計的綠建築外，也是台灣目前最大的室內展覽館。由於展館量體龐大且交通便利，除專業展外，亦為辦理消費性展覽之首選。 附設會議室的彈性隔間設計，能迎合不同會議之需求，充分展現專業化的特色。此外，位於四樓的雲端展場，為一無柱的展覽場地，約為3.5個足球場大，這個寬廣挑高的多功能室內無柱空間，也非常適合舉辦各種大型室內活動，如演唱會、直銷大會、藝文表演、體育競賽及企業尾牙等各種活動，是台灣室內表演場所的最佳選擇。</div>
+                <div class="expo_content">台北南港展覽館2館擁有雙層國家級挑高12公尺的展覽空間，符合國內外各種展覽的空間需求，7樓的多功能會議中心可容3600人適合各種場合之使用， 3樓餐廳及B1商店街提供餐飲服務，地下1~3樓為停車空間，可容納1,296台汽車。</br></br>
+本館核心目標為打造一個舒適、 便捷、安全與環保的活動空間。展館坐落於南港捷運站且鄰近南港火車站及高鐵南港站，享有地利之便在展覽期間人潮的進出動線也能流暢通行。本館受專業展的場租邀約，亦是受到私人機關團體或是自辦展廠商的青睞。 </br></br>
+本館最大的特點是位於7樓的多功能會議中心，其中無柱的會議空間設計、全台唯一能透過隔間組合出10種尺寸，使場地能達到最大效能的規劃及使用，此會議中心能規劃多達222個標準攤位，室內挑高9公尺更設有星光長廊及室外的空中花園，非常適合舉辦會議、 尾牙晚宴、專業展覽、各式活動(演唱會、藝文表演…)。</div>
                 <div class="city_bg"><img src="images/101.svg"></div>
             </div>
 
@@ -138,12 +142,12 @@
                     <div class="vendor_icon">
                         <div class="ven_pic"><img src="images/sky01.svg"></div>
                         <div class="ven_font">雲端展場</div>
-                        <div class="ven_text">雲端展場及一樓展場各可彈性隔成3區使用,且雲端展場採無柱式挑高設計。</div>
+                        <div class="ven_text">一樓展場及四樓展場各可彈性隔成2區使用,且一樓展場採用挑高12公尺的設計。</div>
                     </div>
                     <div class="vendor_icon">
                         <div class="ven_pic"><img src="images/sky02.svg"></div>
                         <div class="ven_font">電扶梯</div>
-                        <div class="ven_text">展場內南北兩側設有直通上下展場之電扶梯。</div>
+                        <div class="ven_text">展場內兩側設有4台直通上下展場之電扶梯及6台電梯。</div>
                     </div>
                     <div class="vendor_icon">
                         <div class="ven_pic"><img src="images/sky03.svg"></div>
@@ -153,7 +157,7 @@
                     <div class="vendor_icon">
                         <div class="ven_pic"><img src="images/sky04.svg"></div>
                         <div class="ven_font">攤位規劃</div>
-                        <div class="ven_text">可規劃2,467個標準攤位。</div>
+                        <div class="ven_text">可規劃2146個標準攤位。</div>
                     </div>
                 </div>
             </div>
