--- a/organizers_item3.html
+++ b/organizers_item3.html
@@ -92,93 +92,92 @@
                 <div class="m-page-headerbg"></div>
                 <div class="m-page-left_bg"><img src="images/pagebg.svg">
                     <div class="m-page_font">
-                        <div class="page_headtitle">活動申請</div>
-                        <div class="page_headtext">台北南港展覽館2館即時的最新消息</div>
+                        <div class="page_headtitle">展覽會場</div>
+                        <div class="page_headtext">台北南港展覽館2館共有三個展覽空間，可規劃之標準攤位數達2146格
+</div>
                     </div>
                 </div>
 
             </div>
             <div class="m-page_wrapper">
-                <div class="breadcrumb_title">線上洽詢</div>
+                <div class="breadcrumb_title">四樓展場</div>
                 <div class="twtbreadcrumb">
                     <ul>
                         <li><a href="index.html">首頁</a></li>
                         <li>/</li>
                         <li><a href="organizers.html">租借場地</a></li>
                         <li>/</li>
-                        <li class="activeddd">活動申請</li>
+                        <li class="activeddd">展覽會場</li>
                     </ul>
                 </div>
             </div>
-
             <div class="orang_wrapper">
                 <div class="orang_tab">
                     <ul>
-                        <a href="event_item1.html"><li>申請流程</li></a>
-                        <a href="event_item2.html"><li>場租試算</li></a>
-                        <a href="event_item3.html"><li class="active">展場線上洽詢</li></a>
-                        <a href="#"><li>其他空間配套</li></a>
-                        <a href="event_item5.html"><li>吊點</li></a>
-                        <a href="advertisements_ad.html"><li>臨時廣告物刊登</li></a>
-                        <a href="event_item7.html"><li>活動剪影</li></a>
-                        <a href="#"><li>展場</li></a>
+                        <a href="organizers_item1.html"><li>基本資訊</li></a>
+                        <a href="organizers_item2.html"><li>一樓展場</li></a>
+                        <a href="organizers_item3.html"><li class="active">四樓展場</li></a>
+                        <a href="organizers_item4.html"><li>內部實景</li></a>
+                        <a href="organizers_booking_calendar.html"><li>空檔查詢</li></a>
+                        <a href="organizers_item6.html"><li>展覽申請</li></a>
+                        <a href="organizers_item7.html"><li>活動申請</li></a>
+                        <!-- <a href="#"><li>尾牙方案</li></a> -->
+                        <a href="#"><li>南港一館</li></a>
+                        <a href="organizers_item5.html"><li>交通及停車場</li></a>
+                        <a href="organizers_item6.html"><li>展覽申請</li></a>
                     </ul>
                 </div>
-                <div class="event_wrap">
-                    <div class="content-area">
-                        <div class="name_slk">*展場
-                            <div class="kkekm">
-                                <table width="100%" border="0">
-                                  <tr>
-                                    <td><input name="input" type="checkbox" value="" /></td>
-                                    <td>一樓展場 </td>
-                                    <td><input name="input2" type="checkbox" value="" /></td>
-                                    <td>雲端展場</td>
-                                  </tr>
-                                </table>
-                            </div>
-                        </div>
-                        <div class="name">*使用日期
-                            <form>
-                                <a class="btn-select">
-                            <select>
-                            <option>2018-07-27</option>
-                            <option>选项二</option>
-                            <option>选项三</option>
-                            <option>选项四</option>
-                            <option>选项五</option>
-                            </select>
-                            </a>
-                            </form>
-
-                            <form>
-                                <a class="btn-select">
-                            <select>
-                            <option>2018-07-27</option>
-                            <option>选项二</option>
-                            <option>选项三</option>
-                            <option>选项四</option>
-                            <option>选项五</option>
-                            </select>
-                            </a>
-                            </form>
-                        </div>
-                        <div class="name"><input name="" type="text" placeholder="*姓名"/></div>
-                        <div class="name"><input name="" type="text" placeholder="*公司"/></div>
-                        <div class="name"><input name="" type="text" placeholder="電話"/></div>
-                        <div class="name"><input name="" type="text" placeholder="手機"/></div>
-                        <div class="name"><input name="" type="text" placeholder="*電子郵件"/></div>
-                        <div class="name"><input name="" type="text" placeholder="*申請用途"/></div>
-                        <div class="massage"><textarea name="" cols="" rows=""  placeholder="*用途說明(以下填寫)"></textarea></div>
-                        <div class="robit"><img src="images/robit.jpg"></div>
-                        <div class="importent">以上資料僅供本會透過電話、郵件等通訊方式與提供資料之個人聯繫接洽用。提供資料之個人可就其個人資料：1.查詢或請求閱覽。2.請求製給複製本。3.請求補充或更正。4.請求停止蒐集、處理或利用。5.請求刪除。如欲行使以上權利，請洽本活動業務承辦人。</div>
-                        <div class="content_btn">確認送出</div>
-                    </div>
+                <div class="widget-pic"><img src="images/flow01.jpg"></div>
+                <div class="expo_table">
+                    <table width="100%" border="0">
+                      <tr>
+                        <td bgcolor="#666666">項目</td>
+                        <td bgcolor="#a4a4a4">一樓展場總計</td>
+                        <td bgcolor="#6da744">I區</td>
+                        <td bgcolor="#f2931e">J區</td>
+                        <td bgcolor="#739ad0">K區</td>
+                      </tr>
+                      <tr>
+                        <td>面積 m2</td>
+                        <td>22,680</td>
+                        <td>7,750</td>
+                        <td>7,180</td>
+                        <td>7,750</td>
+                      </tr>
+                      <tr>
+                        <td>標準攤位數(3mx3m)</td>
+                        <td>1,161</td>
+                        <td>392</td>
+                        <td>377</td>
+                        <td>392</td>
+                      </tr>
+                      <tr>
+                        <td>載重量</td>
+                        <td colspan="4">5 公噸/m2</td>
+                      </tr>
+                      <tr>
+                        <td>高度</td>
+                        <td colspan="4">9m</td>
+                      </tr>
+                      <tr>
+                        <td>貨車入口</td>
+                        <td colspan="4">3座</td>
+                      </tr>
+                      <tr>
+                        <td>貨梯數</td>
+                        <td colspan="4">3台</td>
+                      </tr>
+                      <tr>
+                        <td>柱距</td>
+                        <td colspan="4">18x18m</td>
+                      </tr>
+                    </table>
                 </div>
+                <div class="widget-pic"><img src="images/biew.jpg"></div>
+                <div class="mod-organizer_title">一樓展場平面圖</div>
 
-
+                <div class="widget-pic"><img src="images/hallplan.jpg"></div>
             </div>
-
 
         </article>
 
