--- a/safety_management.html
+++ b/safety_management.html
@@ -102,7 +102,7 @@
                 <div class="breadcrumb_title">安全管理</div>
                 <div class="twtbreadcrumb">
                     <ul>
-                        <li>首頁</li>
+                        <li><a href="index.html">首頁</a></li>
                         <li>/</li>
                         <li class="activeddd">安全管理</li>
                     </ul>
