--- a/transportation2.html
+++ b/transportation2.html
@@ -95,6 +95,7 @@
                         <div class="page_headtitle">交通資訊</div>
                         <div class="page_headtext">本館鄰近南港展覽館捷運站(步行1分鐘) ，開車民眾行駛國道一號、國道三號皆方便，腹地廣大停車方便
 
+
                         </div>
                     </div>
                 </div>
@@ -104,7 +105,7 @@
                 <div class="breadcrumb_title">自行開車</div>
                 <div class="twtbreadcrumb">
                     <ul>
-                        <li>首頁</li>
+                        <li><a href="index.html">首頁</a></li>
                         <li>/</li>
                         <li class="activeddd">交通資訊</li>
                     </ul>
