--- a/transportation4.html
+++ b/transportation4.html
@@ -93,7 +93,8 @@
                 <div class="m-page-left_bg"><img src="images/pagebg.svg">
                     <div class="m-page_font">
                         <div class="page_headtitle">交通資訊</div>
-                        <div class="page_headtext">台北南港展覽館1館為全台首座專業化大型雙層展覽館 打造一個安全、舒適、便利、人本與環保的環境。
+                        <div class="page_headtext">本館鄰近南港展覽館捷運站(步行1分鐘) ，開車民眾行駛國道一號、國道三號皆方便，腹地廣大停車方便
+
                         </div>
                     </div>
                 </div>
@@ -103,7 +104,7 @@
                 <div class="breadcrumb_title">公車路線</div>
                 <div class="twtbreadcrumb">
                     <ul>
-                        <li>首頁</li>
+                        <li><a href="index.html">首頁</a></li>
                         <li>/</li>
                         <li class="activeddd">交通資訊</li>
                     </ul>
