--- a/aboutus6.html
+++ b/aboutus6.html
@@ -99,10 +99,10 @@
 
             </div>
             <div class="m-page_wrapper">
-                <div class="breadcrumb_title">ISO 20121</div>
+                <div class="breadcrumb_title">認證標章</div>
                 <div class="twtbreadcrumb">
                     <ul>
-                        <li>首頁</li>
+                        <li><a href="index.html">首頁</a></li>
                         <li>/</li>
                         <li class="activeddd">展館介紹</li>
                     </ul>
@@ -117,7 +117,7 @@
                         <a href="aboutus3.html"><li>關於展館</li></a>
                         <a href="aboutus4.html"><li>綠色展館</li></a>
                         <a href="aboutus5.html"><li>公共藝術</li></a>
-                        <a href="aboutus6.html"><li class="active">ISO 20121</li></a>
+                        <a href="aboutus6.html"><li class="active">認證標章</li></a>
                         <a href="aboutus7.html"><li>經營者</li></a>
                         <a href="aboutus8.html"><li>展館剪影</li></a>
                         <a href="aboutus9.html"><li>聯絡我們</li></a>
