--- a/advertisements_electronic_board.html
+++ b/advertisements_electronic_board.html
@@ -104,9 +104,9 @@
                 <div class="breadcrumb_title">電子看板</div>
                 <div class="twtbreadcrumb">
                     <ul>
-                        <li>首頁</li>
+                        <li><a href="index.html">首頁</a></li>
                         <li>/</li>
-                        <li>租借場地 </li>
+                        <li><a href="organizers.html">租借場地</a></li>
                         <li>/</li>
                         <li class="activeddd">廣告刊登</li>
                     </ul>
