--- a/conference-room_item5.html
+++ b/conference-room_item5.html
@@ -106,9 +106,7 @@
                         <li>/</li>
                         <li><a href="organizers.html">租借場地</a></li>
                         <li>/</li>
-                        <li><a href="#">會議室</a></li>
-                        <li>/</li>
-                        <li class="activeddd">場租試算</li>
+                        <li class="activeddd">會議室</li>
                     </ul>
                 </div>
             </div>
