--- a/food.html
+++ b/food.html
@@ -102,7 +102,7 @@
                 <div class="breadcrumb_title">1樓商店街</div>
                 <div class="twtbreadcrumb">
                     <ul>
-                        <li>首頁</li>
+                        <li><a href="index.html">首頁</a></li>
                         <li>/</li>
                         <li class="activeddd">餐飲服務</li>
                     </ul>
