--- a/hall2_spaceview.html
+++ b/hall2_spaceview.html
@@ -103,9 +103,9 @@
                 <div class="breadcrumb_title">平面圖</div>
                 <div class="twtbreadcrumb">
                     <ul>
-                        <li>首頁</li>
+                        <li><a href="index.html">首頁</a></li>
                         <li>/</li>
-                        <li>租借場地</li>
+                        <li><a href="organizers.html">租借場地</a></li>
                         <li>/</li>
                         <li class="activeddd">展場</li>
                     </ul>
