--- a/links.html
+++ b/links.html
@@ -102,7 +102,7 @@
                 <div class="breadcrumb_title">相關連結</div>
                 <div class="twtbreadcrumb">
                     <ul>
-                        <li>首頁</li>
+                        <li><a href="index.html">首頁</a></li>
                         <li>/</li>
                         <li class="activeddd">相關連結</li>
                     </ul>
