--- a/news_more.html
+++ b/news_more.html
@@ -102,7 +102,7 @@
                 <div class="breadcrumb_title">最新消息</div>
                 <div class="twtbreadcrumb">
                     <ul>
-                        <li>首頁</li>
+                        <li><a href="index.html">首頁</a></li>
                         <li>/</li>
                         <li>最新消息</li>
                         <li>/</li>
