--- a/organizers_item2.html
+++ b/organizers_item2.html
@@ -92,20 +92,20 @@
                 <div class="m-page-headerbg"></div>
                 <div class="m-page-left_bg"><img src="images/pagebg.svg">
                     <div class="m-page_font">
-                        <div class="page_headtitle">租借場地</div>
-                        <div class="page_headtext">台北南港展覽館1館為全台首座專業化大型雙層展覽館
-                        打造一個安全、舒適、便利、人本與環保的環境。</div>
+                        <div class="page_headtitle">展覽會場</div>
+                        <div class="page_headtext">台北南港展覽館2館共有三個展覽空間，可規劃之標準攤位數達2146格
+</div>
                     </div>
                 </div>
 
             </div>
             <div class="m-page_wrapper">
-                <div class="breadcrumb_title">展覽會場</div>
+                <div class="breadcrumb_title">一樓展場</div>
                 <div class="twtbreadcrumb">
                     <ul>
-                        <li>首頁</li>
+                        <li><a href="index.html">首頁</a></li>
                         <li>/</li>
-                        <li>租借場地</li>
+                        <li><a href="organizers.html">租借場地</a></li>
                         <li>/</li>
                         <li class="activeddd">展覽會場</li>
                     </ul>
@@ -116,13 +116,13 @@
                     <ul>
                         <a href="organizers_item1.html"><li>基本資訊</li></a>
                         <a href="organizers_item2.html"><li class="active">一樓展場</li></a>
-                        <a href="organizers_item2.html"><li>四樓展場</li></a>
+                        <a href="organizers_item3.html"><li>四樓展場</li></a>
                         <a href="organizers_item4.html"><li>內部實景</li></a>
                         <a href="organizers_booking_calendar.html"><li>空檔查詢</li></a>
                         <a href="organizers_item6.html"><li>展覽申請</li></a>
                         <a href="organizers_item7.html"><li>活動申請</li></a>
                         <!-- <a href="#"><li>尾牙方案</li></a> -->
-                        <a href="#"><li>南港一館</li></a>
+                        <a href="hall2.html"><li>南港一館</li></a>
                         <a href="organizers_item5.html"><li>交通及停車場</li></a>
                         <a href="organizers_item6.html"><li>展覽申請</li></a>
                     </ul>
@@ -173,6 +173,7 @@
                       </tr>
                     </table>
                 </div>
+                <div class="widget-pic"><img src="images/biew.jpg"></div>
                 <div class="mod-organizer_title">一樓展場平面圖</div>
 
                 <div class="widget-pic"><img src="images/hallplan.jpg"></div>
