--- a/public_space2.html
+++ b/public_space2.html
@@ -102,7 +102,9 @@
                 <div class="breadcrumb_title">收費基準</div>
                 <div class="twtbreadcrumb">
                     <ul>
-                        <li>首頁</li>
+                        <li><a href="index.html">首頁</a></li>
+                        <li>/</li>
+                        <li><a href="organizers.html">租借場地</a></li>
                         <li>/</li>
                         <li class="activeddd">公共空間租借</li>
                     </ul>
