--- a/visitors6.html
+++ b/visitors6.html
@@ -104,7 +104,7 @@
                 <div class="breadcrumb_title">住宿資訊</div>
                 <div class="twtbreadcrumb">
                     <ul>
-                        <li>首頁</li>
+                        <li><a href="index.html">首頁</a></li>
                         <li>/</li>
                         <li class="activeddd"> 參觀資訊</li>
                     </ul>
